k8s/connect-basic.yml
# NOTE: Must set license key secret below
# OPTIONAL: persistent storage. uncomment sections below
---
# optional - for persistent storage if your cluster supports it
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: persistent-storage-connect
#   namespace: default
# spec:
#   accessModes:
#     - ReadWriteOnce
#   #volumeMode: Block
#   #storageClassName: gp2
#   resources:
#     requests:
#       storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rstudio-connect
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rstudio-connect
  template:
    metadata:
      labels:
        app: rstudio-connect
    spec:
      containers:
      - name: connect
        # should be a pinned version number
        image: rstudio/rstudio-connect:latest
        ports:
        - containerPort: 3939
        securityContext:
          privileged: true
        volumeMounts:
          - name: connect-config
            mountPath: "/etc/rstudio-connect/rstudio-connect.gcfg"
            subPath: "rstudio-connect.gcfg"
          # optional - for persistent storage if your cluster supports it
          # - name: connect-data
          #   mountPath: "/var/lib/rstudio-connect"
      volumes:
      - name: connect-config
        configMap:
          name: rstudio-connect-config
          items:
          - key: rstudio-connect.gcfg
            path: "rstudio-connect.gcfg"
      # optional - for persistent storage if your cluster supports it
      # - name: connect-data
      #   persistentVolumeClaim:
      #     claimName: persistent-storage-connect
---
apiVersion: v1
kind: Service
metadata:
  name: rstudio-connect
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: rstudio-connect
  ports:
  - port: 80
    targetPort: 3939
    protocol: TCP
    name: rstudio-connect-ui
