k8s/kerberos-ssh.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kerberos-ssh-server
spec:
  type: NodePort
  selector:
    app: kerberos-ssh-server
  ports:
  - port: 22
    name: ssh
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kerberos-ssh-server
spec:
  replicas: 1
  serviceName: kerberos-ssh-server
  selector:
    matchLabels:
      app: kerberos-ssh-server
  template:
    metadata:
      labels:
        app: kerberos-ssh-server
    spec:
      containers:
      - name: server
        image: rstudio/kerberos:ssh-server-1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 22
