k8s/kerberos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k-server
  template:
    metadata:
      labels:
        app: k-server
    spec:
      containers:
      - name: server
        image: rstudio/kerberos:server-1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 88
        - containerPort: 464
        - containerPort: 749
---
apiVersion: v1
kind: Service
metadata:
  name: k-server
spec:
  type: NodePort
  selector:
    app: k-server
  ports:
  - port: 88
    name: ticket
  - port: 464
    name: password-changing
  - port: 749
    name: admin
