k8s/launcher-ldap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launcher
  template:
    metadata:
      labels:
        app: launcher
    spec:
      containers:
      - name: launcher
        image: us.gcr.io/rstudio-soleng/launcher-ldap
        #args: ["/usr/lib/rstudio-server/bin/rstudio-launcher"]
        #command: ["sleep","10000"]
        #imagePullPolicy: Never
        ports:
        - containerPort: 5559
        volumeMounts:
        - name: launcher-pub
          mountPath: "/etc/rstudio/launcher.pub"
          subPath: "launcher.pub"
      volumes:
      - name: launcher-pub
        configMap:
          name: launcher-pub
          items:
          - key: launcher.pub
            path: "launcher.pub"
---
apiVersion: v1
kind: Service
metadata:
  name: launcher
spec:
  type: NodePort
  selector:
    app: launcher
  ports:
  - port: 5559
