k8s/nfs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs01
  template:
    metadata:
      labels:
        app: nfs01
    spec:
      containers:
      - name: nfs01
        image: us.gcr.io/rstudio-soleng/nfs-server-alpine:latest
        args: ["/var/home"]
        volumeMounts:
        - mountPath: /var/home
          name: home-volume
        securityContext:
          privileged: true
        ports:
        - containerPort: 2049
      volumes:
      - name: home-volume
        emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: nfs01
spec:
  type: NodePort
  selector:
    app: nfs01
  ports:
  - port: 2049
