k8s/rsp-ldap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsp 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsp
  template:
    metadata:
      labels:
        app: rsp
    spec:
      containers:
      - name: rsp
        image: us.gcr.io/rstudio-soleng/launcher-rsp-ldap
        ports:
        - containerPort: 8787
        securityContext:
          privileged: true
        volumeMounts:
          - name: nfs
            mountPath: "/home"
          - name: launcher-mounts
            mountPath: "/etc/rstudio/launcher-mounts"
            subPath: "launcher-mounts"
          - name: launcher-pem
            mountPath: "/etc/rstudio/launcher.pem"
            subPath: "launcher.pem"
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
      - name: launcher-mounts
        configMap:
          name: launcher-mounts
          items:
          - key: launcher-mounts
            path: "launcher-mounts"
      - name: launcher-pem
        configMap:
          name: launcher-pem
          defaultMode: 256
          items:
          - key: launcher.pem
            path: "launcher.pem"
---
apiVersion: v1
kind: Service
metadata:
  name: rsp
spec:
  type: NodePort
  selector:
    app: rsp
  ports:
  - port: 8787
