k8s/rsp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsp
  template:
    metadata:
      labels:
        app: rsp
    spec:
      containers:
      - name: rsp
        image: compose_launcher-rsp:4
        imagePullPolicy: Never
        ports:
        - containerPort: 8787
        securityContext:
          privileged: true
        volumeMounts:
          - name: nfs
            mountPath: "/home"
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
---
apiVersion: v1
kind: Service
metadata:
  name: rsp
spec:
  type: NodePort
  selector:
    app: rsp
  ports:
  - port: 8787
