k8s/traefik-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: launcher-ingress
  namespace: rstudio
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rsp
          servicePort: 8787
